add LRCLIB, remove silly delay I had

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.11)
+cmake_minimum_required(VERSION 3.12)
 project(lrctag LANGUAGES C CXX)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
@@ -10,6 +10,8 @@ find_package(TagLib 1.12 REQUIRED)
 find_package(spdlog REQUIRED)
 find_package(argparse REQUIRED)
 find_package(ICU COMPONENTS uc i18n REQUIRED)
+find_package(CURL COMPONENTS HTTPS REQUIRED)
+find_package(nlohmann_json REQUIRED)
 
 set(lrctag_sources)
 
@@ -34,7 +36,7 @@ add_executable(lrctag ${lrctag_sources})
 # TagLib >= 2.0 requires C++17, and we rely on std::filesystem (which is c++17)
 set_property(TARGET lrctag PROPERTY CXX_STANDARD 17)
 
-target_link_libraries(lrctag PRIVATE TagLib::TagLib spdlog::spdlog ICU::uc ICU::i18n)
+target_link_libraries(lrctag PRIVATE TagLib::TagLib spdlog::spdlog ICU::uc ICU::i18n CURL::libcurl nlohmann_json::nlohmann_json)
 
 #if(LTO_SUPPORTED)
 #    set_property(TARGET lrctag PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
