--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,9 +19,9 @@ list(APPEND lrctag_sources "src/main.cpp")
 list(APPEND lrctag_sources "src/lrc.cpp")
 list(APPEND lrctag_sources "src/config.cpp")
 list(APPEND lrctag_sources "src/utils.cpp")
-list(APPEND lrctag_sources "src/result.cpp")
 list(APPEND lrctag_sources "src/unicode.cpp")
 list(APPEND lrctag_sources "src/worker.cpp")
+list(APPEND lrctag_sources "src/scanner.cpp")
 list(APPEND lrctag_sources "src/debuglistener.cpp")
 list(APPEND lrctag_sources "src/container/container.cpp")
 list(APPEND lrctag_sources "src/container/containerfactory.cpp")
