--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,9 +23,9 @@ list(APPEND lrctag_sources "src/unicode.cpp")
 list(APPEND lrctag_sources "src/worker.cpp")
 list(APPEND lrctag_sources "src/scanner.cpp")
 list(APPEND lrctag_sources "src/debuglistener.cpp")
-list(APPEND lrctag_sources "src/container/container.cpp")
 list(APPEND lrctag_sources "src/container/containerfactory.cpp")
 list(APPEND lrctag_sources "src/taghandler/taghandler.cpp")
+list(APPEND lrctag_sources "src/taghandler/id3v2.cpp")
 list(APPEND lrctag_sources "src/lyricsource/filelyricsource.cpp")
 list(APPEND lrctag_sources "src/lyricsource/lyricsourcefactory.cpp")
 list(APPEND lrctag_sources "src/lyricdest/lyricdestfactory.cpp")
